// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterMenu rendering renders expected elements 1`] = `
<div
  className="FilterMenu"
>
  <div
    aria-activedescendant={null}
    aria-controls={null}
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Add filter"
    className="FilterMenu__button"
    id="filterButton"
    role="button"
    tabIndex="0"
  >
    <SvgIcon
      icon={
        Object {
          "icon": Array [],
          "iconName": "filter",
          "prefix": "fas",
        }
      }
    />
  </div>
</div>
`;

exports[`FilterMenu rendering renders expected elements when filter is not null 1`] = `
<div
  className="FilterMenu"
>
  <div
    aria-activedescendant={null}
    aria-controls={null}
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Add filter"
    className="FilterMenu__button"
    id="filterButton"
    role="button"
    tabIndex="0"
  >
    <SvgIcon
      icon={
        Object {
          "icon": Array [],
          "iconName": "filter",
          "prefix": "fas",
        }
      }
    />
  </div>
  <React.Portal>
    <FilterEditor
      buttonId="filterButton"
      name="value"
      onClose={[Function]}
      onSave={[Function]}
    />
  </React.Portal>
</div>
`;

exports[`FilterMenu rendering renders expected elements when filters is set 1`] = `
<div
  className="FilterMenu"
>
  <div
    aria-activedescendant={null}
    aria-controls={null}
    aria-expanded={false}
    aria-haspopup="true"
    aria-label="Add filter"
    className="FilterMenu__button"
    id="filterButton"
    role="button"
    tabIndex="0"
  >
    <SvgIcon
      icon={
        Object {
          "icon": Array [],
          "iconName": "filter",
          "prefix": "fas",
        }
      }
    />
  </div>
</div>
`;

exports[`FilterMenu rendering renders expected elements when menuVisible is true 1`] = `
<div
  className="FilterMenu"
>
  <div
    aria-activedescendant="filterMenu-a"
    aria-controls="filterMenu"
    aria-expanded={true}
    aria-haspopup="true"
    aria-label="Add filter"
    className="FilterMenu__button"
    id="filterButton"
    role="button"
    tabIndex="0"
  >
    <SvgIcon
      icon={
        Object {
          "icon": Array [],
          "iconName": "filter",
          "prefix": "fas",
        }
      }
    />
  </div>
  <React.Portal>
    <div
      className="FilterMenu__menu"
      id="filterMenu"
      role="menu"
      style={
        Object {
          "display": "none",
        }
      }
    >
      <div
        className="FilterMenu__option FilterMenu__option--current"
        data-index={0}
        id="filterMenu-a"
        role="menuitem"
      />
      <div
        className="FilterMenu__option"
        data-index={1}
        id="filterMenu-b"
        role="menuitem"
      />
    </div>
  </React.Portal>
</div>
`;
